- Remove XDMF from File interface. XDMF is XML based, and has many possibilities for
	file access, which are not accessible through the limited File interface and
	"<<" ">>" operators. Instead of File, use XDMFFile, and use XDMFFile.read() and
	XDMFFile.write() for I/O. Demos and tests have been updated to show usage.
        XDMF now also supports ASCII I/O in serial, useful for compatibility with users
	who do not have the HDF5 library available.
- Require polynomial degree or finite element for Expressions in the Python
	interface (fixes Issue #355, https://bitbucket.org/fenics-project/dolfin/issues/355)
- Switch to Google Test framwork for C++ unit tests
- Fix bug when reading domain data from mesh file for a ghosted mesh
- Remove reference versions of constructors for many classes that
	store a pointer/reference to the object passed to the
	constructor. This is an intrusive interface change for C++ users,
	but necessary to improve code maintainabilty and to improve memory
	safety. The Python interface is (virtually) unaffected.
- Remove class SubSpace. Using FunctionSpace::sub(...) instead
- Remove reference versions constructors of NonlinearVariationalSolver
- Remove setting of bounds from NonlinearVariationalSolver (was
	already available through NonlinearVariationalProblem)
- Update Trilinos support to include Amesos2, and better support from Python
- Rewrite interface of TensorLayout and SparsityPattern; local-to-global
	maps now handled using new IndexMap class; GenericSparsityPattern
	class removed
- Remove QT (was an optional dependency)
- PETScTAOSolver::solve() now returns a pair of number of
	iterations (std::size_t) and whether iteration converged (bool)
- Better quality refinement in 2D in Plaza algorithm, by choosing refinement
	pattern based on max/min edge ratio
- Removed refine_cell() method in CellTypes
- Enable marker refinement to work in parallel for 1D meshes too
- Add std::abort to Python exception hook to avoid parallel deadlocks