@@ -99,7 +99,7 @@ Parameters PETScPreconditioner::default_parameters()
 }
 //-----------------------------------------------------------------------------
 PETScPreconditioner::PETScPreconditioner(std::string type)
-  : _type(type), petsc_near_nullspace(NULL), gdim(0)
+  : _type(type), gdim(0)
 {
   // Set parameter values
   parameters = default_parameters();
@@ -115,8 +115,7 @@ PETScPreconditioner::PETScPreconditioner(std::string type)
 //-----------------------------------------------------------------------------
 PETScPreconditioner::~PETScPreconditioner()
 {
-  if (petsc_near_nullspace)
-    MatNullSpaceDestroy(&petsc_near_nullspace);
+  // Do nothing
 }
 //-----------------------------------------------------------------------------
 void PETScPreconditioner::set(PETScKrylovSolver& solver)
@@ -238,35 +237,6 @@ void PETScPreconditioner::set(PETScKrylovSolver& solver)
     if (ierr != 0) petsc_error(ierr, __FILE__, "PCView");
   }
   */
-}
-//-----------------------------------------------------------------------------
-void PETScPreconditioner::set_nullspace(const VectorSpaceBasis& near_nullspace)
-{
-  // Clear near nullspace
-  if (petsc_near_nullspace)
-    MatNullSpaceDestroy(&petsc_near_nullspace);
-  _near_nullspace.clear();
-
-  // Copy vectors
-  for (std::size_t i = 0; i < near_nullspace.dim(); ++i)
-  {
-    dolfin_assert(near_nullspace[i]);
-    const PETScVector& x = near_nullspace[i]->down_cast<PETScVector>();
-
-    // Copy vector
-    _near_nullspace.push_back(x);
-  }
-
-  // Get pointers to underlying PETSc objects
-  std::vector<Vec> petsc_vec(near_nullspace.dim());
-  for (std::size_t i = 0; i < near_nullspace.dim(); ++i)
-    petsc_vec[i] = _near_nullspace[i].vec();
-
-  // Create null space
-  PetscErrorCode ierr;
-  ierr = MatNullSpaceCreate(PETSC_COMM_WORLD, PETSC_FALSE, near_nullspace.dim(),
-                            petsc_vec.data(), &petsc_near_nullspace);
-  if (ierr != 0) petsc_error(ierr, __FILE__, "MatNullSpaceCreate");
 }
 //-----------------------------------------------------------------------------
 void PETScPreconditioner::set_coordinates(const std::vector<double>& x,
