@@ -1,3 +1,4 @@
+- Remove PETScPreconditioner::set_near_nullspace and add PETScMatrix::set_near_nullspace
 - Remove XDMF from File interface. XDMF is XML based, and has many possibilities for
 	file access, which are not accessible through the limited File interface and
 	"<<" ">>" operators. Instead of File, use XDMFFile, and use XDMFFile.read() and
